gen/LatticeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/balazsagardi/Non-Sync Docs/repos/LatticeCSharp/Lattice/Lattice.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class LatticeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, SINGLELINE_COMMENT=2, MULTILINE_COMMENT=3, STRING=4, FLOAT_LIT=5, 
		INTEGER=6, NATURAL_NUMBER=7, SEMICOLON=8, LEFT_BRACE=9, RIGHT_BRACE=10, 
		LEFT_PAREN=11, RIGHT_PAREN=12, COMMA=13, OP_ASSIGN=14, OP_B_EQ=15, OP_B_NEQ=16, 
		OP_B_OR=17, OP_B_AND=18, OP_B_NOT=19, OP_ADD=20, OP_SUB=21, OP_MULT=22, 
		OP_DIV=23, OP_REM=24, OP_GRT=25, OP_REF=26, OP_CLONE=27, OP_RETURN=28, 
		OP_PRINT=29, OP_DEF=30, TYPE_INT=31, TYPE_FLOAT=32, TYPE_STRING=33, TYPE_BOOL=34, 
		TYPE_GRAPH=35, TYPE_RELATIONSHIP=36, KEYWORD_FMAP=37, KEYWORD_IF=38, KEYWORD_ELSE=39, 
		KEYWORD_WHILE=40, KEYWORD_TRUE=41, KEYWORD_FALSE=42, OP_REL_LEFT=43, OP_REL_RIGHT=44, 
		ID=45;
	public const int
		RULE_start = 0, RULE_statement = 1, RULE_funcdef = 2, RULE_returnstatement = 3, 
		RULE_listargs = 4, RULE_arg = 5, RULE_taillistarg = 6, RULE_printstatement = 7, 
		RULE_vardecl = 8, RULE_vardecltail = 9, RULE_type = 10, RULE_varassignorgraphmanip = 11, 
		RULE_tailvarassignorgraphmanip = 12, RULE_tailvarassign = 13, RULE_assignval = 14, 
		RULE_boolval = 15, RULE_tailgraphmanip = 16, RULE_listgraphop = 17, RULE_graphop = 18, 
		RULE_addref = 19, RULE_addclone = 20, RULE_addrel = 21, RULE_expr = 22, 
		RULE_number = 23, RULE_addop = 24, RULE_mulop = 25, RULE_ifblock = 26, 
		RULE_boolexpr = 27, RULE_boolop = 28, RULE_compop = 29, RULE_funccall = 30, 
		RULE_whileblock = 31, RULE_listparams = 32, RULE_param = 33, RULE_taillistparams = 34;
	public static readonly string[] ruleNames = {
		"start", "statement", "funcdef", "returnstatement", "listargs", "arg", 
		"taillistarg", "printstatement", "vardecl", "vardecltail", "type", "varassignorgraphmanip", 
		"tailvarassignorgraphmanip", "tailvarassign", "assignval", "boolval", 
		"tailgraphmanip", "listgraphop", "graphop", "addref", "addclone", "addrel", 
		"expr", "number", "addop", "mulop", "ifblock", "boolexpr", "boolop", "compop", 
		"funccall", "whileblock", "listparams", "param", "taillistparams"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, "';'", "'{'", "'}'", "'('", 
		"')'", "','", "'='", "'=='", "'!='", "'||'", "'&&'", "'!'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'<'", "'ref'", "'clone'", "'return'", "'print'", 
		"'def'", "'int'", "'float'", "'str'", "'bool'", "'graph'", "'rel'", "'fmap'", 
		"'if'", "'else'", "'while'", "'true'", "'false'", "'|-'", "'->'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", "STRING", 
		"FLOAT_LIT", "INTEGER", "NATURAL_NUMBER", "SEMICOLON", "LEFT_BRACE", "RIGHT_BRACE", 
		"LEFT_PAREN", "RIGHT_PAREN", "COMMA", "OP_ASSIGN", "OP_B_EQ", "OP_B_NEQ", 
		"OP_B_OR", "OP_B_AND", "OP_B_NOT", "OP_ADD", "OP_SUB", "OP_MULT", "OP_DIV", 
		"OP_REM", "OP_GRT", "OP_REF", "OP_CLONE", "OP_RETURN", "OP_PRINT", "OP_DEF", 
		"TYPE_INT", "TYPE_FLOAT", "TYPE_STRING", "TYPE_BOOL", "TYPE_GRAPH", "TYPE_RELATIONSHIP", 
		"KEYWORD_FMAP", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_WHILE", "KEYWORD_TRUE", 
		"KEYWORD_FALSE", "OP_REL_LEFT", "OP_REL_RIGHT", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lattice.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LatticeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LatticeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LatticeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncdefContext[] funcdef() {
			return GetRuleContexts<FuncdefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncdefContext funcdef(int i) {
			return GetRuleContext<FuncdefContext>(i);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36627212664832L) != 0)) {
				{
				State = 72;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case OP_RETURN:
				case OP_PRINT:
				case TYPE_INT:
				case TYPE_FLOAT:
				case TYPE_STRING:
				case TYPE_BOOL:
				case TYPE_GRAPH:
				case KEYWORD_IF:
				case KEYWORD_WHILE:
				case ID:
					{
					State = 70;
					statement();
					}
					break;
				case OP_DEF:
					{
					State = 71;
					funcdef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VardeclContext vardecl() {
			return GetRuleContext<VardeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarassignorgraphmanipContext varassignorgraphmanip() {
			return GetRuleContext<VarassignorgraphmanipContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintstatementContext printstatement() {
			return GetRuleContext<PrintstatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfblockContext ifblock() {
			return GetRuleContext<IfblockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileblockContext whileblock() {
			return GetRuleContext<WhileblockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunccallContext funccall() {
			return GetRuleContext<FunccallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(LatticeParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ReturnstatementContext returnstatement() {
			return GetRuleContext<ReturnstatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				vardecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				varassignorgraphmanip();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 79;
				printstatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 80;
				ifblock();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 81;
				whileblock();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 82;
				funccall();
				State = 83;
				Match(SEMICOLON);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 85;
				returnstatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncdefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_DEF() { return GetToken(LatticeParser.OP_DEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LatticeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_PAREN() { return GetToken(LatticeParser.LEFT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_PAREN() { return GetToken(LatticeParser.RIGHT_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_BRACE() { return GetToken(LatticeParser.LEFT_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_BRACE() { return GetToken(LatticeParser.RIGHT_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ListargsContext listargs() {
			return GetRuleContext<ListargsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcdef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterFuncdef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitFuncdef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncdefContext funcdef() {
		FuncdefContext _localctx = new FuncdefContext(Context, State);
		EnterRule(_localctx, 4, RULE_funcdef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			Match(OP_DEF);
			State = 89;
			type();
			State = 90;
			Match(ID);
			State = 91;
			Match(LEFT_PAREN);
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 66571993088L) != 0)) {
				{
				State = 92;
				listargs();
				}
			}

			State = 95;
			Match(RIGHT_PAREN);
			State = 96;
			Match(LEFT_BRACE);
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36626138923008L) != 0)) {
				{
				{
				State = 97;
				statement();
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 103;
			Match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnstatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_RETURN() { return GetToken(LatticeParser.OP_RETURN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AssignvalContext assignval() {
			return GetRuleContext<AssignvalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(LatticeParser.SEMICOLON, 0); }
		public ReturnstatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnstatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterReturnstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitReturnstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnstatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnstatementContext returnstatement() {
		ReturnstatementContext _localctx = new ReturnstatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_returnstatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(OP_RETURN);
			State = 106;
			assignval();
			State = 107;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListargsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArgContext arg() {
			return GetRuleContext<ArgContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TaillistargContext taillistarg() {
			return GetRuleContext<TaillistargContext>(0);
		}
		public ListargsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listargs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterListargs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitListargs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListargs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListargsContext listargs() {
		ListargsContext _localctx = new ListargsContext(Context, State);
		EnterRule(_localctx, 8, RULE_listargs);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			arg();
			State = 110;
			taillistarg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LatticeParser.ID, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgContext arg() {
		ArgContext _localctx = new ArgContext(Context, State);
		EnterRule(_localctx, 10, RULE_arg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			type();
			State = 113;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TaillistargContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(LatticeParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(LatticeParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgContext[] arg() {
			return GetRuleContexts<ArgContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgContext arg(int i) {
			return GetRuleContext<ArgContext>(i);
		}
		public TaillistargContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_taillistarg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterTaillistarg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitTaillistarg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTaillistarg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TaillistargContext taillistarg() {
		TaillistargContext _localctx = new TaillistargContext(Context, State);
		EnterRule(_localctx, 12, RULE_taillistarg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 115;
				Match(COMMA);
				State = 116;
				arg();
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintstatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OP_PRINT() { return GetToken(LatticeParser.OP_PRINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(LatticeParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(LatticeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(LatticeParser.STRING, 0); }
		public PrintstatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printstatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.EnterPrintstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILatticeListener typedListener = listener as ILatticeListener;
			if (typedListener != null) typedListener.ExitPrintstatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILatticeVisitor<TResult> typedVisitor = visitor as ILatticeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintstatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintstatementContext printstatement() {
		PrintstatementContext _localctx = new PrintstatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_printstatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			Match(OP_PRINT);
			State = 123;
			_la = TokenStream.LA(1);
			if ( !(_la==STRING || _la==ID) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 124;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
